--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 
 
 /*--------------------------------------------------------------
-# Navigation Menu 
+# Navigation Menu
 --------------------------------------------------------------*/
 .navbar {
     background-color: rgb(0,0,0,0.8);
@@ -49,7 +49,7 @@
     left: 0;
     right: 0;
     bottom: 20px;
-    z-index: 2;
+    z-index: 3;
     padding: 0px;
 }
 
@@ -60,8 +60,6 @@
 
 #logo {
     background-color: rgb(0,0,0,1);
-    /*padding-left: 0px!important;*/
-    /*padding-right: 0px!important;*/
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -75,4 +73,39 @@
 
 .navbar-nav:first-child  {
     color: red;
+}
+
+
+/*--------------------------------------------------------------
+# Blog
+--------------------------------------------------------------*/
+
+#blog-container
+{
+    float:right;
+    position: fixed;
+    top: 20%;
+    right: 15%;
+    width:500px;
+    padding:3%;
+    background:#fff;
+    z-index: 2;
+    overflow-y:hidden
+}
+#blog-content
+{
+    height:570px;
+    overflow:auto;
+    background:#fff;
+}
+#blog-content::-webkit-scrollbar {
+    display: none;  // Safari and Chrome
+}
+
+@media (max-width: 576px) {
+
+    #blog-container {
+        right: auto;
+        left: auto;
+    }
 }
